--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ DeepSeek Architecture [LEARNING]/
 
 # Ignore virtual environment directory
 venv/
+C:\Users\didri\Desktop\Programmering\ArtificalintelligenceModels\LR_AI_LLM Model\Models_Deepseek
+C:\Users\didri\Desktop\Programmering\ArtificalintelligenceModels\LR_AI_LLM Model\Models_Deepseek\DeepSeek-V3
+C:\Users\didri\Desktop\Programmering\ArtificalintelligenceModels\LR_AI_LLM Model\Models_Deepseek\Model-Qwen-7B
+   Models_Deepseek/
