--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,5 @@ venv/
 C:\Users\didri\Desktop\Programmering\ArtificalintelligenceModels\LR_AI_LLM Model\Models_Deepseek
 C:\Users\didri\Desktop\Programmering\ArtificalintelligenceModels\LR_AI_LLM Model\Models_Deepseek\DeepSeek-V3
 C:\Users\didri\Desktop\Programmering\ArtificalintelligenceModels\LR_AI_LLM Model\Models_Deepseek\Model-Qwen-7B
-   Models_Deepseek/
+Models_Deepseek/
+C:\Users\didri\Desktop\Programmering\ArtificalintelligenceModels\LR_AI_LLM Model\Model_LRLLM\LearnReflect_LLM
